ymp3/static/css/style.css
html{
	font-size: 10px;
}

body{
	font-family: 'Raleway', sans-serif;
	font-size: 1.4rem;
}

.color-primary{
	color: rgb(244, 67, 54) !important;
}
.nav--custom{
	height: 80px;
}
.nav-wrapper .brand-logo{
	font-weight: 200;
	font-size: 3rem;
}

.nav--transparent{
	background-color: transparent;
	box-shadow: none;
}

.nav-overlay--hidden{
	display: none;
}

.nav--custom .brand-logo{
	position: static;
	flex: 1;
	text-align: left;
}

.nav--custom .search{
	width: 50%;
}

.nav--custom .nav-wrapper{
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0 4rem;
}

.nav--custom .search{
	text-align: center;
	margin: 0 2rem;
}
.nav--custom .search .search-btn{
	font-size: 1.5rem;
}
.float-left{
	float: right;
}
.nav--custom .nav-addons{
	flex: 1;
	text-align: center;
	font-size: 2rem;
	/*display: inline-block;*/
}

.nav--custom.nav--transparent a:hover{
	color: white;
}

.home-header{
	background-image: url("../img/bg_main.jpg");
	background-size: cover;
	background-position: center;
	height: 100vh;
	margin-top: -64px;
}

.home-header .container{
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
}

.main-wrapper{
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.main-contents{
	flex: 1;
}

.search-exp{
	width: 100%;
}
.search-wrapper{
	background-color: rgb(255,255,255);
	border-radius: 3px;
	display: flex;
	flex-direction: row;
	padding: 1rem 1.5rem;
	color: rgba(244, 67, 54,0.75);
	text-align: center;
}

.search--alt .search-wrapper{
	background-color: transparent;
	border: 1px solid rgba(244, 67, 54,0.75);
}

.search--lg .search-wrapper{
	padding: 2.5rem;
}
.search input{
	/*background-color: rgba(255,255,255,0.9);*/
	margin: 0;
	border: 0;
}

.search--lg input{
	font-size: 2rem;
}

.search input[type=text]:focus:not([readonly]){
	border: 0;
	box-shadow: none;
}

.search button:focus{
	background-color: transparent;
	color: rgb(244, 67, 54);
}

.search-exp .or span{
	display: inline-block;
	border: 2px solid rgb(255,255,255);
	border-radius: 50%;
	padding: 1.5rem;
	color: rgb(255,255,255);
}

.btn-icon-only{
	background-color: transparent;
	border: 0;
}

.white-space{
	display: block;
	width: 100%;
}

.space-sm{
	padding: 15px 0;
}

.space-mini{
	padding: 7.5px 0;
}

.space-xm{
	padding: 5px 0;
}

.space-md{
	padding: 30px 0;
}
.space-lg{
	padding: 45px 0;
}

.text-center{
	text-align: center;
}

.no-shadow{
	box-shadow: none;
}

.font-200{
	font-weight: 200;
}

.bg-color-primary{
	background-color: rgb(244, 67, 54);
}

.overflow-hidden{
	overflow: hidden;
}

.nav-white{
	background-color: white;
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

.nav-sticky{
	top: -80px;
}

.nav-white .brand-logo,.nav-white a{
	color: rgba(244, 67, 54,0.75);
}

.line-height-1{
	line-height: 1 !important;
}
.height-auto{
	height: auto !important;
}

.card--ym3 .card-content{
	padding: 1.25rem;
	overflow: hidden;
	text-overflow: ellipsis;
}

.card--ym3 .meta{
	font-size: 1.25rem;
	overflow: hidden;
	text-overflow: ellipsis;
}

.meta div i{
	margin-right: 0.5rem;
}
.meta div{
	white-space: nowrap;
}

.card--ym3--title{
	margin-top: 0;
	color:rgb(51,51,51);
	cursor: pointer;
	white-space: nowrap;
	font-weight: normal;
}

.card-image .meta-duration{
	font-size: 1.25rem;
	position: absolute;
	bottom: 1.25rem;
	right: 1.25rem;
	background-color: rgba(244, 67, 54,0.85);
	color: white;
	padding: 0.1rem 0.5rem;
	transition: all 0.5s;
	/*z-index: 1;*/
}

.card-image:hover .meta-duration,.card-image.dwn-ready-card  .meta-duration{
	background-color:white;
	color: rgba(244, 67, 54,0.85);
}

.btn-dwn{
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	color: white;
	height: 50px;
	width: 50px;
	background-color: rgba(244, 67, 54,0.8);
	border-radius: 50%;
	justify-content: center;
	transition: all 0.5s;
	z-index: 1;
}

.dwn-ready-card .btn-dwn .fa-spinner{
	display: block;
}

.btn-dwn .fa-spinner,.dwn-done.dwn-ready-card .btn-dwn .fa-spinner{
	display: none;
}

.btn-dwn .fa-check{
	display: none;
}

.dwn-done .btn-dwn .fa-check{
	display: block;
}


.dwn-ready-card .btn-dwn .fa-arrow-down{
	display: none;
}

.card-image:hover .btn-dwn,.dwn-ready-card .btn-dwn{
	background-color: transparent;
}

.card-image:hover .overlay,.card-image.dwn-ready-card .overlay{
	background-color: rgba(244, 67, 54,0.75);
}

.card-reveal .card-title{
	font-size: 1.8rem;
}

.overlay{
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	transition: all 0.5s;
}

.title-deco{
	line-height: 2;
}

.title-deco:after{
	content: "";
	background-color: rgba(244, 67, 54,0.75);
	height: 2px;
	display: block;
	width: 50px;
	box-sizing: border-box;
}

.title-deco--sm:after{
	width: 30px;
}

.text-center.title-deco:after{
	margin: 0 auto;
}

.trending{
	margin-bottom: 5rem;
}

.trending-list{
	margin-bottom: 0;
}

.trending-title .title-deco{
	text-transform: capitalize;
}

.footer{
	display: flex;
	margin-bottom: 0;
	align-items: center;
	padding: 1rem 0;
}


.footer .footer-logo{
	flex: 1;
	align-items: center;
	color: white;
	font-size: 4rem;
	font-weight: 200;
}

.footer .footer-social{
	text-align: right;
}

.social__links{
	display: inline-block;
}

.footer ul li{
	display: inline-block;
	margin-right: 2rem;
}

.footer ul.social__links li{
	margin-right: 1rem;
}

.footer ul li:last-child{
	margin-right: 0;
}

.footer a{
	color: rgba(255,255,255,0.75);
}

.footer a:hover{
	color: rgba(255,255,255,1);
}

.social__links a{
	width: 35px;
	height: 35px;
	border: 1px solid rgba(255,255,255,0.75);
	border-radius: 50%;
}
.social__links a:hover {
	border-color: white;
}
.valign-wrapper{
	justify-content: center;
}

.result{
	margin-bottom: 5rem;
}

#search-preloader{
	display: none;
	margin-bottom: 4rem;
}

#search-preloader .preloader-wrapper{
	display: block;
	margin: 0 auto;
}

/* The Overlay (background) */
#nav-overlay.overlay {
	/* Height & width depends on how you want to reveal the overlay (see JS below) */
	height: 100%;
	width: 0;
	position: fixed; /* Stay in place */
	z-index: 1102; /* Sit on top */
	right: 0;
	top: 0;
	background-color: white; /* Black fallback color */
	background-color: white; /* Black w/opacity */
	overflow-x: hidden; /* Disable horizontal scroll */
	transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
}

/* Position the content inside the overlay */
#nav-overlay .overlay-content {
	margin-right: auto;
	margin-left: auto;
	max-width: 500px;
	position: relative;
	top: 25%; /* 25% from the top */
	width: 100%; /* 100% width */
	text-align: center; /* Centered text/links */
	margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
	display: flex;
	flex-direction: row;
}

#nav-overlay .overlay-content a.active{
	color: rgba(244, 67, 54,0.75);
}

.overlay-content .about{
	text-align: left;
	flex: 1;
	padding: 0 2rem;
	font-size: 1.6rem;
}

.overlay-content .nav-links{
	border-right: 5px solid rgba(244, 67, 54,0.75);
	text-align: right;
	padding: 0 2rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

	/* The navigation links inside the overlay */
#nav-overlay.overlay a {
	padding: 8px;
	text-decoration: none;
	font-size: 36px;
	color: #818181;
	display: block; /* Display block instead of inline */
	transition: 0.3s; /* Transition effects on hover (color) */
}

/* When you mouse over the navigation links, change their color */
#nav-overlay.overlay a:hover,#nav-overlay.overlay a:focus {
	color: rgba(244, 67, 54,1);
}

/* Position the close button (top right corner) */
#nav-overlay.overlay .closebtn {
	position: absolute;
	top: 20px;
	right: 45px;
	font-size: 60px;
}

/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
@media screen and (max-height: 450px) {
	#nav-overlay .overlay a {font-size: 20px}
	#nav-overlay .overlay .closebtn {
		font-size: 40px;
		top: 15px;
		right: 35px;
	}
}

.card--ym3 .card-image.ymp3-download img{
	min-height: 120px;
	background-color: rgba(244, 67, 54, 0.11);;
}

@media only screen and (max-width: 600px) {
	.nav--custom .nav-wrapper{
		padding: 0 2.8rem;
	}
}

@media only screen and (max-width: 768px) {
	.footer .footer-logo,.footer .footer-site-map{
		display: none;
	}

	.footer .footer-social.col.s4{
		width: 100%;
		float: none;
		text-align: center;
	}
}

@media only screen and (max-width: 700px) {
	.nav-addons .explore{
		display: none;
	}
}

@media only screen and (max-width: 992px) {
	nav .brand-logo.left {
		left: 4rem;
	}
	nav .brand-logo{
		left: 50%;
		-webkit-transform: translateX(0);
		transform: translateX(0);
	}
}

